# SimdLecture

./: README.md  SegmentCheckBenchmark-report-github.md  SumLoopBenchmark-report-github.md  lecture_plan.md  links.md  simd_presentation.pptx
SimdLecture/: SimdLecture.sln
SimdLecture/DragonFractal/: DragonFractal.csproj  DragonFractalTask.cs  Pixels.cs  Program.cs
SimdLecture/DragonFractal/Properties/: AssemblyInfo.cs
SimdLecture/DragonFractalBenchmark/: DragonFractalBenchmark.csproj  Program.cs  packages.config
SimdLecture/SimdExamples/: Program.cs  RandomExtensions.cs  SegmentCheckBenchmark.cs  SimdExamples.csproj  SumLoopBenchmark.cs
SimdLecture/SimdExamples.Test/: ParamsTestCaseData.cs  SegmentCheckTests.cs  SequenceExtensions.cs  SimdExamples.Test.csproj  SumTests.cs
SimdLecture/SimdLecture/: Program.cs  SegmentCheckBenchmark.cs  SimdLecture.csproj  packages.config
cpp/: .clang-format  .gitignore  CMakeLists.txt
cpp/array-scan/: CMakeLists.txt  array-scan-bench.cpp  array-scan.hpp
cpp/cmake/: BuildFlags.cmake  Findbenchmark.cmake
cpp/commons/: CMakeLists.txt  array-allocator.hpp  commons-test.cpp  random.hpp  simd-vector.hpp
cpp/cpu-capabilities/: CMakeLists.txt  cpu-capabilities-main.cpp  cpu-capabilities.hpp
cpp/scripts/: generate_plot.py
cpp/sum-in-array/: .sum-in-array.hpp.swp  CMakeLists.txt  benchmark_results.json  sum-in-array-bench.cpp  sum-in-array-test.cpp  sum-in-array.hpp
cpp/words-count/: CMakeLists.txt  words-count-bench.cpp  words-count-test.cpp  words-count.hpp
resources/: highlight.css  source.cs
(+3 files in other folders)
